--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="FastFood, en donde encontrarás tu comida favorita desde ddonde sea a donde quieras. Porque sabemos que la comida es una maravilla del mundo.">
     <title>Vite + React</title>
   </head>
   <body>
