--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/hamburguesa.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="FastFood, en donde encontrarás tu comida favorita desde ddonde sea a donde quieras. Porque sabemos que la comida es una maravilla del mundo.">
-    <title>Vite + React</title>
+    <title>FastFood</title>
   </head>
   <body>
     <div id="root"></div>
