misión y visión agregada

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/hamburguesa.webp" />
+    <link rel="canonical" href="https://fastfood-marenol.vercel.app/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="FastFood, en donde encontrarás tu comida favorita desde ddonde sea a donde quieras. Porque sabemos que la comida es una maravilla del mundo.">
     <title>FastFood</title>
